开始设计项目原型、构思业务和设计数据库

--- a/projectTemplate/front/Person.html
+++ b/projectTemplate/front/Person.html
@@ -250,32 +250,41 @@
             <div class="menu-arrow">></div>
         </div>
     </a>
-
-    <div class="menu-item">
-        <div class="menu-icon">📍</div>
-        <div class="menu-text">收货地址</div>
-        <div class="menu-arrow">></div>
-    </div>
-    <div class="menu-item">
-        <div class="menu-icon">📱</div>
-        <div class="menu-text">绑定手机</div>
-        <div class="menu-arrow">></div>
-    </div>
-    <div class="menu-item">
-        <div class="menu-icon">🔒</div>
-        <div class="menu-text">账号安全</div>
-        <div class="menu-arrow">></div>
-    </div>
-    <div class="menu-item">
-        <div class="menu-icon">⚙️</div>
-        <div class="menu-text">设置</div>
-        <div class="menu-arrow">></div>
-    </div>
-    <div class="menu-item">
-        <div class="menu-icon">📞</div>
-        <div class="menu-text">客服热线</div>
-        <div class="menu-arrow">></div>
-    </div>
+    <a href="./Person/Address.html">
+        <div class="menu-item">
+            <div class="menu-icon">📍</div>
+            <div class="menu-text">收货地址</div>
+            <div class="menu-arrow">></div>
+        </div>
+    </a>
+    <a href="./Person/BindPhone.html">
+        <div class="menu-item">
+            <div class="menu-icon">📱</div>
+            <div class="menu-text">绑定手机</div>
+            <div class="menu-arrow">></div>
+        </div>
+    </a>
+    <a href="./Person/AccountSecurity.html">
+        <div class="menu-item">
+            <div class="menu-icon">🔒</div>
+            <div class="menu-text">账号安全</div>
+            <div class="menu-arrow">></div>
+        </div>
+    </a>
+    <a href="./Person/Settings.html">
+        <div class="menu-item">
+            <div class="menu-icon">⚙️</div>
+            <div class="menu-text">设置</div>
+            <div class="menu-arrow">></div>
+        </div>
+    </a>
+    <a href="./Person/CustomerService.html">
+        <div class="menu-item">
+            <div class="menu-icon">📞</div>
+            <div class="menu-text">客服热线</div>
+            <div class="menu-arrow">></div>
+        </div>
+    </a>
 </div>
 
 <!-- 底部导航 -->
