--- a/projectTemplate/front/Home.html
+++ b/projectTemplate/front/Home.html
@@ -175,16 +175,19 @@
 
 <!-- 商品列表 -->
 <div class="product-list">
-    <div class="product-item">
-        <div class="product-image">商品图片</div>
-        <div class="product-info">
-            <div class="product-title">超值商品名称超长显示测试</div>
-            <div>
-                <span class="product-price">¥19.9</span>
-                <span class="product-original-price">¥99.9</span>
+    <a href="Home/ProductDetail.html">
+        <div class="product-item">
+            <div class="product-image">商品图片</div>
+            <div class="product-info">
+                <div class="product-title">超值商品名称超长显示测试</div>
+                <div>
+                    <span class="product-price">¥19.9</span>
+                    <span class="product-original-price">¥99.9</span>
+                </div>
             </div>
         </div>
-    </div>
+    </a>
+
 
     <div class="product-item">
         <div class="product-image">商品图片</div>
