--- a/projectTemplate/front/Person.html
+++ b/projectTemplate/front/Person.html
@@ -222,22 +222,30 @@
         <div class="view-all">查看全部订单 ></div>
     </div>
     <div class="order-status">
-        <div class="status-item">
-            <div class="status-icon">💰</div>
-            <div class="status-label">待付款</div>
-        </div>
-        <div class="status-item">
-            <div class="status-icon">📦</div>
-            <div class="status-label">待发货</div>
-        </div>
-        <div class="status-item">
-            <div class="status-icon">🚚</div>
-            <div class="status-label">待收货</div>
-        </div>
-        <div class="status-item">
-            <div class="status-icon">⭐</div>
-            <div class="status-label">待评价</div>
-        </div>
+        <a href="./Person/PendingPayment.html" style="text-decoration: none; color: inherit;">
+            <div class="status-item">
+                <div class="status-icon">💰</div>
+                <div class="status-label">待付款</div>
+            </div>
+        </a>
+        <a href="./Person/PendingShipment.html" style="text-decoration: none; color: inherit;">
+            <div class="status-item">
+                <div class="status-icon">📦</div>
+                <div class="status-label">待发货</div>
+            </div>
+        </a>
+        <a href="./Person/PendingReceipt.html" style="text-decoration: none; color: inherit;">
+            <div class="status-item">
+                <div class="status-icon">🚚</div>
+                <div class="status-label">待收货</div>
+            </div>
+        </a>
+        <a href="./Person/PendingReview.html" style="text-decoration: none; color: inherit;">
+            <div class="status-item">
+                <div class="status-icon">⭐</div>
+                <div class="status-label">待评价</div>
+            </div>
+        </a>
     </div>
 </div>
 
