--- a/projectTemplate/Platform/Home.html
+++ b/projectTemplate/Platform/Home.html
@@ -1,10 +1,367 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <title>官网</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>商户平台 - 电商商户管理系统</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f5f5f5;
+        }
+
+        /* 顶部导航栏 */
+        .header {
+            background-color: #fff;
+            padding: 15px 50px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.05);
+            position: sticky;
+            top: 0;
+            z-index: 100;
+        }
+
+        .logo {
+            font-size: 24px;
+            font-weight: bold;
+            color: #ff5000;
+        }
+
+        .nav-menu {
+            display: flex;
+            gap: 30px;
+        }
+
+        .nav-item {
+            text-decoration: none;
+            color: #333;
+            font-size: 16px;
+        }
+
+        .nav-item:hover {
+            color: #ff5000;
+        }
+
+        .auth-buttons {
+            display: flex;
+            gap: 15px;
+        }
+
+        .login-btn {
+            padding: 8px 20px;
+            border: 1px solid #ff5000;
+            background-color: transparent;
+            color: #ff5000;
+            border-radius: 4px;
+            cursor: pointer;
+            font-size: 14px;
+        }
+
+        .register-btn {
+            padding: 8px 20px;
+            background-color: #ff5000;
+            color: white;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            font-size: 14px;
+        }
+
+        /* 主体内容 */
+        .hero-section {
+            background: linear-gradient(135deg, #ff5000, #ff7043);
+            color: white;
+            padding: 80px 50px;
+            text-align: center;
+        }
+
+        .hero-title {
+            font-size: 48px;
+            font-weight: bold;
+            margin-bottom: 20px;
+        }
+
+        .hero-subtitle {
+            font-size: 20px;
+            margin-bottom: 30px;
+            opacity: 0.9;
+        }
+
+        .cta-button {
+            padding: 15px 40px;
+            background-color: white;
+            color: #ff5000;
+            border: none;
+            border-radius: 30px;
+            font-size: 18px;
+            font-weight: bold;
+            cursor: pointer;
+            transition: all 0.3s ease;
+        }
+
+        .cta-button:hover {
+            transform: translateY(-3px);
+            box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+        }
+
+        /* 特色功能 */
+        .features-section {
+            padding: 80px 50px;
+            background-color: white;
+        }
+
+        .section-title {
+            text-align: center;
+            font-size: 32px;
+            margin-bottom: 50px;
+            color: #333;
+        }
+
+        .features-grid {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            gap: 30px;
+        }
+
+        .feature-card {
+            text-align: center;
+            padding: 30px;
+            border-radius: 8px;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.05);
+            transition: transform 0.3s ease;
+        }
+
+        .feature-card:hover {
+            transform: translateY(-10px);
+        }
+
+        .feature-icon {
+            font-size: 48px;
+            margin-bottom: 20px;
+            color: #ff5000;
+        }
+
+        .feature-title {
+            font-size: 20px;
+            font-weight: bold;
+            margin-bottom: 15px;
+            color: #333;
+        }
+
+        .feature-desc {
+            color: #666;
+            line-height: 1.6;
+        }
+
+        /* 统计数据 */
+        .stats-section {
+            background-color: #f9f9f9;
+            padding: 60px 50px;
+            text-align: center;
+        }
+
+        .stats-grid {
+            display: grid;
+            grid-template-columns: repeat(4, 1fr);
+            gap: 30px;
+        }
+
+        .stat-item {
+            padding: 20px;
+        }
+
+        .stat-number {
+            font-size: 48px;
+            font-weight: bold;
+            color: #ff5000;
+            margin-bottom: 10px;
+        }
+
+        .stat-label {
+            font-size: 18px;
+            color: #666;
+        }
+
+        /* 底部 */
+        .footer {
+            background-color: #333;
+            color: white;
+            padding: 50px 50px 20px;
+        }
+
+        .footer-grid {
+            display: grid;
+            grid-template-columns: repeat(4, 1fr);
+            gap: 30px;
+            margin-bottom: 30px;
+        }
+
+        .footer-column h3 {
+            margin-bottom: 20px;
+            font-size: 18px;
+        }
+
+        .footer-links {
+            list-style: none;
+        }
+
+        .footer-links li {
+            margin-bottom: 10px;
+        }
+
+        .footer-links a {
+            color: #ccc;
+            text-decoration: none;
+        }
+
+        .footer-links a:hover {
+            color: #ff5000;
+        }
+
+        .copyright {
+            text-align: center;
+            padding-top: 20px;
+            border-top: 1px solid #555;
+            color: #999;
+            font-size: 14px;
+        }
+    </style>
 </head>
 <body>
-    <div>可以注册成为商户</div>
+<!-- 顶部导航栏 -->
+<div class="header">
+    <div class="logo">商户平台</div>
+    <div class="nav-menu">
+        <a href="Home.html" class="nav-item">首页</a>
+        <a href="#" class="nav-item">功能</a>
+        <a href="#" class="nav-item">价格</a>
+        <a href="#" class="nav-item">帮助中心</a>
+    </div>
+    <div class="auth-buttons">
+        <button class="login-btn" onclick="location.href='login.html'">登录</button>
+        <button class="register-btn" onclick="location.href='Register.html'">免费注册</button>
+    </div>
+</div>
+
+<!-- 主体内容 -->
+<div class="hero-section">
+    <h1 class="hero-title">专业的电商商户管理平台</h1>
+    <p class="hero-subtitle">一站式解决方案，助力您的电商事业快速发展</p>
+    <button class="cta-button" onclick="location.href='register.html'">立即入驻</button>
+</div>
+
+<!-- 特色功能 -->
+<div class="features-section">
+    <h2 class="section-title">核心功能</h2>
+    <div class="features-grid">
+        <div class="feature-card">
+            <div class="feature-icon">📦</div>
+            <h3 class="feature-title">商品管理</h3>
+            <p class="feature-desc">轻松管理商品信息，支持批量操作和多规格设置，提高商品上新效率。</p>
+        </div>
+        <div class="feature-card">
+            <div class="feature-icon">💰</div>
+            <h3 class="feature-title">订单处理</h3>
+            <p class="feature-desc">智能订单处理系统，自动同步多渠道订单，提升发货效率。</p>
+        </div>
+        <div class="feature-card">
+            <div class="feature-icon">📊</div>
+            <h3 class="feature-title">数据分析</h3>
+            <p class="feature-desc">多维度数据报表，实时掌握销售情况，助力经营决策。</p>
+        </div>
+    </div>
+</div>
+
+<!-- 统计数据 -->
+<div class="stats-section">
+    <div class="stats-grid">
+        <div class="stat-item">
+            <div class="stat-number">10,000+</div>
+            <div class="stat-label">入驻商户</div>
+        </div>
+        <div class="stat-item">
+            <div class="stat-number">500万+</div>
+            <div class="stat-label">日订单量</div>
+        </div>
+        <div class="stat-item">
+            <div class="stat-number">99.9%</div>
+            <div class="stat-label">系统可用性</div>
+        </div>
+        <div class="stat-item">
+            <div class="stat-number">24/7</div>
+            <div class="stat-label">技术支持</div>
+        </div>
+    </div>
+</div>
+
+<!-- 底部 -->
+<div class="footer">
+    <div class="footer-grid">
+        <div class="footer-column">
+            <h3>产品</h3>
+            <ul class="footer-links">
+                <li><a href="#">商品管理</a></li>
+                <li><a href="#">订单处理</a></li>
+                <li><a href="#">数据分析</a></li>
+                <li><a href="#">营销工具</a></li>
+            </ul>
+        </div>
+        <div class="footer-column">
+            <h3>支持</h3>
+            <ul class="footer-links">
+                <li><a href="#">帮助中心</a></li>
+                <li><a href="#">开发者文档</a></li>
+                <li><a href="#">API文档</a></li>
+                <li><a href="#">系统状态</a></li>
+            </ul>
+        </div>
+        <div class="footer-column">
+            <h3>公司</h3>
+            <ul class="footer-links">
+                <li><a href="#">关于我们</a></li>
+                <li><a href="#">联系我们</a></li>
+                <li><a href="#">加入我们</a></li>
+                <li><a href="#">新闻资讯</a></li>
+            </ul>
+        </div>
+        <div class="footer-column">
+            <h3>合作伙伴</h3>
+            <ul class="footer-links">
+                <li><a href="#">开放平台</a></li>
+                <li><a href="#">服务商</a></li>
+                <li><a href="#">代理商</a></li>
+                <li><a href="#">招商合作</a></li>
+            </ul>
+        </div>
+    </div>
+    <div class="copyright">
+        © 2024 商户平台. 保留所有权利.
+    </div>
+</div>
+
+<script>
+    // 登录按钮点击事件
+    document.querySelector('.login-btn').addEventListener('click', function() {
+        window.location.href = 'login.html';
+    });
+
+    // 注册按钮点击事件
+    document.querySelector('.register-btn').addEventListener('click', function() {
+        window.location.href = 'register.html';
+    });
+
+    // CTA按钮点击事件
+    document.querySelector('.cta-button').addEventListener('click', function() {
+        window.location.href = 'register.html';
+    });
+</script>
 </body>
 </html>
