--- a/projectTemplate/Platform/Profile.html
+++ b/projectTemplate/Platform/Profile.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>管理后台 - 个人中心</title>
+    <title>店铺信息 - 商户平台</title>
     <style>
         * {
             margin: 0;
@@ -118,7 +118,7 @@
             color: #333;
         }
 
-        /* 个人信息卡片 */
+        /* 店铺信息卡片 */
         .profile-card {
             background-color: white;
             border-radius: 8px;
@@ -156,12 +156,6 @@
             margin-bottom: 5px;
         }
 
-        .profile-role {
-            color: #ff5000;
-            font-size: 14px;
-            margin-bottom: 10px;
-        }
-
         .profile-status {
             display: inline-block;
             padding: 4px 12px;
@@ -193,34 +187,6 @@
             font-weight: bold;
         }
 
-        /* 统计信息 */
-        .stats-grid {
-            display: grid;
-            grid-template-columns: repeat(4, 1fr);
-            gap: 20px;
-            margin-bottom: 20px;
-        }
-
-        .stat-card {
-            background-color: white;
-            border-radius: 8px;
-            padding: 20px;
-            text-align: center;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.05);
-        }
-
-        .stat-number {
-            font-size: 24px;
-            font-weight: bold;
-            color: #ff5000;
-            margin-bottom: 5px;
-        }
-
-        .stat-label {
-            font-size: 14px;
-            color: #666;
-        }
-
         /* 操作按钮 */
         .action-buttons {
             display: flex;
@@ -250,33 +216,21 @@
 <body>
 <!-- 顶部导航栏 -->
 <div class="header">
-    <div class="logo">管理系统</div>
+    <div class="logo">商户平台</div>
     <div class="user-info">
         <div class="notification">
             🔔
             <span class="badge">3</span>
         </div>
-        <div class="avatar" onclick="location.href='Home.html'">👤</div>
+        <div class="avatar" onclick="location.href='profile.html'">👤</div>
     </div>
 </div>
 
 <div class="container">
     <!-- 侧边栏 -->
     <div class="sidebar">
-        <div class="menu-item active" onclick="location.href='Home.html'">
-            👤 个人中心
-        </div>
-        <div class="menu-item" onclick="location.href='Statistics.html'">
-            📊 数据统计
-        </div>
-        <div class="menu-item" onclick="location.href='Settings.html'">
-            🛠️ 系统设置
-        </div>
-        <div class="menu-item" onclick="location.href='Users.html'">
-            👥 用户管理
-        </div>
-        <div class="menu-item" onclick="location.href='Permissions.html'">
-            👥 权限管理
+        <div class="menu-item active" onclick="location.href='Profile.html'">
+            🏪 店铺信息
         </div>
         <div class="menu-item" onclick="location.href='Products.html'">
             📦 商品管理
@@ -284,52 +238,58 @@
         <div class="menu-item" onclick="location.href='Orders.html'">
             💰 订单管理
         </div>
+        <div class="menu-item" onclick="location.href='Statistics.html'">
+            📊 数据统计
+        </div>
+        <div class="menu-item" onclick="location.href='Finance.html'">
+            💵 财务管理
+        </div>
+        <div class="menu-item" onclick="location.href='settings.html'">
+            ⚙️ 系统设置
+        </div>
     </div>
 
     <!-- 主内容区 -->
     <div class="main-content">
-        <h1 class="page-title">个人中心</h1>
+        <h1 class="page-title">店铺信息</h1>
 
-
-
-        <!-- 个人信息卡片 -->
+        <!-- 店铺信息卡片 -->
         <div class="profile-card">
             <div class="profile-header">
-                <div class="profile-avatar">👤</div>
+                <div class="profile-avatar">📱</div>
                 <div class="profile-basic">
-                    <div class="profile-name">管理员张三</div>
-                    <div class="profile-role">超级管理员</div>
-                    <div class="profile-status">在线</div>
+                    <div class="profile-name">数码旗舰店</div>
+                    <div class="profile-status">营业中</div>
                 </div>
             </div>
 
             <div class="profile-details">
                 <div class="detail-item">
-                    <div class="detail-label">用户ID</div>
-                    <div class="detail-value">ADMIN001</div>
+                    <div class="detail-label">店铺ID</div>
+                    <div class="detail-value">SHOP001234</div>
                 </div>
                 <div class="detail-item">
-                    <div class="detail-label">用户名</div>
-                    <div class="detail-value">admin_zhang</div>
-                </div>
-                <div class="detail-item">
-                    <div class="detail-label">真实姓名</div>
+                    <div class="detail-label">店主姓名</div>
                     <div class="detail-value">张三</div>
                 </div>
                 <div class="detail-item">
-                    <div class="detail-label">手机号码</div>
+                    <div class="detail-label">联系电话</div>
                     <div class="detail-value">138****8888</div>
                 </div>
                 <div class="detail-item">
                     <div class="detail-label">邮箱地址</div>
-                    <div class="detail-value">zhangsan@company.com</div>
+                    <div class="detail-value">zhangsan@store.com</div>
                 </div>
                 <div class="detail-item">
-                    <div class="detail-label">所属部门</div>
-                    <div class="detail-value">技术部</div>
+                    <div class="detail-label">店铺地址</div>
+                    <div class="detail-value">北京市朝阳区电商园区A座101室</div>
                 </div>
                 <div class="detail-item">
-                    <div class="detail-label">入职时间</div>
+                    <div class="detail-label">主营类目</div>
+                    <div class="detail-value">数码电子产品</div>
+                </div>
+                <div class="detail-item">
+                    <div class="detail-label">开店时间</div>
                     <div class="detail-value">2023-01-15</div>
                 </div>
                 <div class="detail-item">
@@ -356,20 +316,17 @@
             // 根据点击的菜单项跳转到相应页面
             const menuText = this.textContent.trim();
             switch(menuText) {
-                case '👤 个人中心':
-                    // 当前页面，无需跳转
-                    break;
-                case '📊 数据统计':
-                    break;
-                case '🛠️ 系统设置':
-                    break;
-                case '👥 用户管理':
-                    break;
-                case '👥 权限管理':
+                case '🏪 店铺信息':
                     break;
                 case '📦 商品管理':
                     break;
                 case '💰 订单管理':
+                    break;
+                case '📊 数据统计':
+                    break;
+                case '💵 财务管理':
+                    break;
+                case '⚙️ 系统设置':
                     break;
             }
         });
@@ -377,7 +334,7 @@
 
     // 编辑信息按钮点击事件
     document.querySelector('.edit-btn').addEventListener('click', function() {
-        alert('跳转到编辑信息页面');
+        alert('跳转到编辑店铺信息页面');
     });
 </script>
 </body>
